--- a/home.html
+++ b/home.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido - Asistencia EDEC</title>
     <link rel="stylesheet" href="../css/style.css">
+    
+    <script src="../js/authGuard.js"></script> 
 </head>
 <body>
     <div class="home-container">
         <h1>¡Bienvenido!</h1>
         <p>Has iniciado sesión correctamente.</p>
-        </div>
+        <button id="logoutButton">Cerrar Sesión</button>
+    </div>
+    
+    <script>
+        document.getElementById('logoutButton').addEventListener('click', () => {
+            localStorage.removeItem('isLoggedIn'); // Elimina el flag de sesión
+            window.location.href = 'index.html'; // Redirige al login
+        });
+    </script>
 </body>
 </html>
