--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
 <div class="asistencia-container">
     
-    <div class="logo"></div> <!-- Cambiarás esto luego -->
+    <div class="logo"></div>
 
     <input 
         type="text" 
@@ -33,11 +33,6 @@
         <div class="tecla">←</div>
         <div class="tecla">0</div>
         <div class="tecla">C</div>
-    </div>
-
-    <div class="boton-row">
-        <button class="btn-entrada" id="btnEntrada">Entrada</button>
-        <button class="btn-salida" id="btnSalida">Salida</button>
     </div>
 
     <button class="btn-registrar" id="btnRegistrar">Registrar</button>
