--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title>Registrar Asistencia</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body class="asistencia-page">
 
     <!-- CONTENEDOR PRINCIPAL -->
     <div class="asistencia-container">
