--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Login - Asistencia EDEC</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body class="login-page">
     <div class="login-container">
         <h2>Iniciar Sesión</h2>
         <form id="loginForm">
