--- a/home.html
+++ b/home.html
@@ -8,6 +8,9 @@
 </head>
 <body class="asistencia-page">
 
+    <!-- BOTÓN CERRAR SESIÓN -->
+    <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar Sesión</button>
+
     <!-- CONTENEDOR PRINCIPAL -->
     <div class="asistencia-container">
         
@@ -46,6 +49,7 @@
 
     <div id="mensajeExito" class="mensaje-exito">Asistencia registrada</div>
 
+    <script src="../js/authGuard.js"></script>
     <script src="../js/asistencia.js"></script>
 </body>
 </html>
