update con logo

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar Sesión</button>
 
     <div class="asistencia-container">
-        <div class="logo"></div>
+        <img src="images/logo.png" alt="Logo" class="logo">
 
         <input type="text" id="matriculaInput" class="input-matricula" placeholder="Ingresa tu matrícula" readonly>
 
