update buscador con coleccion nueva

--- a/buscador.html
+++ b/buscador.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="buscador-page">
-    <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar Sesión</button>
-
     <div class="buscador-container">
+        <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar Sesión</button>
         <h1>Asistencia Apodaca</h1>
         
         <div class="buscador-header">
@@ -61,6 +60,7 @@
                 <thead>
                     <tr>
                         <th>Matrícula</th>
+                        <th>Nombre</th>
                         <th>Fecha</th>
                         <th>Hora</th>
                     </tr>
