update renombre de archivos

--- a/asistencias.html
+++ b/asistencias.html
@@ -77,6 +77,6 @@
     </div>
 
     <script src="js/authGuardBuscador.js"></script>
-    <script src="js/buscador.js"></script>
+    <script src="js/asistencias_buscador.js"></script>
 </body>
 </html>
