--- a/home.html
+++ b/home.html
@@ -26,6 +26,6 @@
     </div>
 
     <script src="../js/authGuard.js"></script>
-    <script src="../js/asistencia.js"></script>
+    <script src="../js/registrador.js"></script>
 </body>
 </html>
