update renombre de archivos

--- a/asistencias.html
+++ b/asistencias.html
@@ -76,7 +76,7 @@
         </div>
     </div>
 
-    <script src="js/authGuardBuscador.js"></script>
+    <script src="js/authGuard_asistencias.js"></script>
     <script src="js/asistencias_buscador.js"></script>
 </body>
 </html>
