--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
         <div id="mensajeExito" class="mensaje-exito">¡Asistencia registrada!</div>
     </div>
 
-    <script src="../js/authGuard.js"></script>
+    <script src="../js/authGuard_registrador.js"></script>
     <script src="../js/registrador.js"></script>
 </body>
 </html>
