--- a/asistenciaslogin.html
+++ b/asistenciaslogin.html
@@ -24,6 +24,6 @@
             <button type="submit">Ingresar</button>
         </form>
     </div>
-    <script src="js/loginBuscador.js"></script>
+    <script src="js/login_asistencias.js"></script>
 </body>
 </html>
