--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
             <button type="submit">Ingresar</button>
         </form>
     </div>
-    <script src="../js/login.js"></script>
+    <script src="../js/login_registrador.js"></script>
 </body>
 </html>
