update de usuarios

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <h2>Iniciar Sesión</h2>
         <form id="loginForm">
             <div class="input-group">
-                <label for="username">Usuario:</label>
-                <input type="text" id="username" name="username" required>
+                <label for="correo">Correo:</label>
+                <input type="email" id="correo" name="correo" required>
             </div>
             <div class="input-group">
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="password" required>
+                <label for="contraseña">Contraseña:</label>
+                <input type="password" id="contraseña" name="contraseña" required>
             </div>
             <p id="error-message" class="error-text" style="display: none;">
                 Las credenciales no son correctas.
