--- a/home.html
+++ b/home.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrar Asistencia</title>
     <link rel="stylesheet" href="../css/style.css">
+    <style>
+        body { visibility: hidden; }
+    </style>
 </head>
 <body class="asistencia-page">
+    <script>
+        // Verificación inmediata antes de renderizar contenido
+        (function() {
+            const isLoggedIn = localStorage.getItem('isLoggedIn');
+            if (isLoggedIn !== 'true') {
+                window.location.replace('index.html');
+                return;
+            }
+            document.body.style.visibility = 'visible';
+        })();
+    </script>
     <button class="btn-cerrar-sesion" id="btnCerrarSesion">Cerrar Sesión</button>
 
     <div class="asistencia-container">
