update buscador fichados

--- a/buscador.html
+++ b/buscador.html
@@ -56,6 +56,7 @@
     <div class="modal-overlay" id="modalFicharAlumno" style="display: none;">
         <div class="modal-content modal-fichar">
             <h2>¿Fichar alumno?</h2>
+            <div id="mensajeExitoFichar" class="mensaje-exito">¡Alumno fichado exitosamente!</div>
             <div class="modal-buttons-fichar">
                 <button class="btn-fichar-si" id="btnFicharSi">Sí</button>
                 <button class="btn-fichar-no" id="btnFicharNo">No</button>
