update nombres logins

--- a/asistenciaslogin.html
+++ b/asistenciaslogin.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Buscador Asistencia EDEC</title>
+    <title>Login - Asistencias EDEC</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="login-page">
     <div class="login-container">
-        <h2>Iniciar Sesión - Buscador</h2>
+        <h2>Iniciar Sesión - Asistencias</h2>
         <form id="loginForm">
             <div class="input-group">
                 <label for="correo">Correo:</label>
