--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Asistencia EDEC</title>
+    <title>Login - Registrador EDEC</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="login-page">
     <div class="login-container">
-        <h2>Iniciar Sesión</h2>
+        <h2>Iniciar Sesión - Registrador</h2>
         <form id="loginForm">
             <div class="input-group">
                 <label for="correo">Correo:</label>
