update tabla de usuarios administrador

--- a/administrador.html
+++ b/administrador.html
@@ -169,10 +169,10 @@
                 <table class="tabla-usuarios" id="tablaUsuarios">
                     <thead>
                         <tr>
-                            <th>Nombre Completo</th>
-                            <th>Correo</th>
-                            <th>Rol</th>
-                            <th>Campus</th>
+                            <th data-columna="nombre" class="sortable-header">Nombre Completo</th>
+                            <th data-columna="correo" class="sortable-header">Correo</th>
+                            <th data-columna="rol" class="sortable-header">Rol</th>
+                            <th data-columna="campus" class="sortable-header">Campus</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
