--- a/administrador.html
+++ b/administrador.html
@@ -75,13 +75,20 @@
         
         <div class="alumnos-controls">
             <button class="btn-regresar-alumnos" id="btnRegresarAlumnos">← Regresar</button>
-            <div class="selector-tipo-alumno">
-                <label for="selectTipoAlumno">Tipo de Alumno:</label>
-                <select id="selectTipoAlumno" name="selectTipoAlumno">
-                    <option value="bachillerato">Bachillerato</option>
-                    <option value="universidad">Universidad</option>
-                </select>
+            <div class="alumnos-controls-right">
+                <div class="selector-tipo-alumno">
+                    <label for="selectTipoAlumno">Tipo de Alumno:</label>
+                    <select id="selectTipoAlumno" name="selectTipoAlumno">
+                        <option value="bachillerato">Bachillerato</option>
+                        <option value="universidad">Universidad</option>
+                    </select>
+                </div>
+                <button class="btn-agregar-alumno" id="btnAgregarAlumno">Agregar Alumno</button>
             </div>
+        </div>
+        
+        <div class="buscador-alumnos-container">
+            <input type="text" id="inputBuscarAlumno" class="input-buscar-alumno" placeholder="Buscar alumno bachillerato">
         </div>
 
         <div class="tabla-alumnos-container">
@@ -91,11 +98,12 @@
                         <th>Matrícula</th>
                         <th>Alumno</th>
                         <th>Programa</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody id="tbodyAlumnos">
                     <tr>
-                        <td colspan="3" style="text-align: center;">Cargando alumnos...</td>
+                        <td colspan="4" style="text-align: center;">Cargando alumnos...</td>
                     </tr>
                 </tbody>
             </table>
@@ -103,6 +111,84 @@
 
         <div class="paginacion-alumnos" id="paginacionAlumnos">
             <!-- Los botones de paginación se generarán dinámicamente -->
+        </div>
+    </div>
+
+    <!-- Modal para confirmar eliminación de alumno -->
+    <div class="modal-overlay" id="modalEliminarAlumno" style="display: none;">
+        <div class="modal-content modal-confirmacion">
+            <h2>¿Eliminar Alumno?</h2>
+            <div class="modal-buttons">
+                <button type="button" class="btn-modal-submit" id="btnConfirmarEliminar">Sí</button>
+                <button type="button" class="btn-modal-cancel" id="btnCancelarEliminar">No</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal para crear alumno -->
+    <div class="modal-overlay" id="modalCrearAlumno" style="display: none;">
+        <div class="modal-content modal-crear-alumno">
+            <button class="btn-cerrar-modal" id="btnCerrarCrearAlumno">×</button>
+            <h2>Crear Nuevo Alumno</h2>
+            <form id="formCrearAlumno">
+                <div class="input-group">
+                    <label for="cursoCrear">Curso:</label>
+                    <select id="cursoCrear" name="cursoCrear" required>
+                        <option value="">Seleccione un curso</option>
+                        <option value="Bachillerato">Bachillerato</option>
+                        <option value="Universidad">Universidad</option>
+                    </select>
+                </div>
+                <div class="input-group">
+                    <label for="matriculaCrear">Matrícula:</label>
+                    <input type="text" id="matriculaCrear" name="matriculaCrear" required>
+                </div>
+                <div class="input-group">
+                    <label for="nombreCrear">Nombre:</label>
+                    <input type="text" id="nombreCrear" name="nombreCrear" required>
+                </div>
+                <div class="input-group">
+                    <label for="coordinadorCrear">Coordinador:</label>
+                    <input type="text" id="coordinadorCrear" name="coordinadorCrear" required>
+                </div>
+                <div class="input-group">
+                    <label for="graduadoCrear">Graduado:</label>
+                    <select id="graduadoCrear" name="graduadoCrear" required>
+                        <option value="No" selected>No</option>
+                        <option value="Si">Sí</option>
+                    </select>
+                </div>
+                <div class="input-group">
+                    <label for="correoCrearAlumno">Correo:</label>
+                    <input type="email" id="correoCrearAlumno" name="correoCrearAlumno" required>
+                </div>
+                <div class="input-group">
+                    <label for="campusCrearAlumno">Campus:</label>
+                    <input type="text" id="campusCrearAlumno" name="campusCrearAlumno" value="Apodaca" required>
+                </div>
+                <div class="input-group">
+                    <label for="programaCrear">Programa:</label>
+                    <input type="text" id="programaCrear" name="programaCrear" required>
+                </div>
+                <div class="input-group">
+                    <label for="cicloCrear">Ciclo:</label>
+                    <input type="text" id="cicloCrear" name="cicloCrear" required>
+                </div>
+                <div class="input-group">
+                    <label for="turnoCrear">Turno:</label>
+                    <select id="turnoCrear" name="turnoCrear" required>
+                        <option value="Matutino" selected>Matutino</option>
+                        <option value="Vespertino">Vespertino</option>
+                        <option value="Nocturno">Nocturno</option>
+                    </select>
+                </div>
+                <p id="error-message-crear-alumno" class="error-text" style="display: none;"></p>
+                <p id="success-message-crear-alumno" class="success-text" style="display: none;"></p>
+                <div class="modal-buttons">
+                    <button type="submit" class="btn-modal-submit">Crear Alumno</button>
+                    <button type="button" class="btn-modal-cancel" id="btnCancelarCrearAlumno">Cancelar</button>
+                </div>
+            </form>
         </div>
     </div>
 
